...
          setState(() {
            currentPageIndex = index;
          });
        },
        destinations: [
          Semantics(
            identifier: 'navigation-tests',
            child: const NavigationDestination(
              selectedIcon: Icon(Icons.show_chart_rounded),
              icon: Icon(Icons.show_chart_outlined),
              label: 'Tester',
            ),
          ),
          Semantics(
            identifier: 'navigation-skis',
            child: NavigationDestination(
              selectedIcon: SvgPicture.asset(
                'assets/icons/ski_icon.svg',
                width: 24,
                height: 24,
                colorFilter: ColorFilter.mode(
...
