...
                    ),
                  ),
                  onPressed: () {
                    goToRecordPage(context);
                  },
                  label: Text(
                    'Nytt åk',
                    style: TextStyle(color: theme.colorScheme.onSurface),
                  ),
                  icon: Icon(
                    Icons.play_circle_outline,
                    color: theme.colorScheme.onSurface,
                  ),
...
