...
    final theme = Theme.of(context);

    return Center(
      child: Column(
        children: [
          SizedBox(height: 64),
          Text("Välj skida för åket", style: theme.textTheme.titleMedium),
          Expanded(
            child: ListView.separated(
              padding: const EdgeInsets.all(
                RunRecorderScreen.PADDING_FROM_EDGE,
              ),
              itemCount: widget.selectableSkis.length,
...
            ),
          ),
          Padding(
            padding: const EdgeInsets.all(RunRecorderScreen.PADDING_FROM_EDGE),
            child: BigButton(
              backgroundColor: theme.colorScheme.secondary,
              title: 'STARTA TEST',
              onPress: selectedSki == null
                  ? null
                  : () {
                      widget.onStartClick(selectedSki!);
                    },
            ),
...
