...
        children: [
          SizedBox(height: 16),

          Row(
            children: [
              Text(
                'Samlar in data...',
                style: textTheme.headlineLarge?.copyWith(
                  fontWeight: FontWeight.bold,
                ),
              ),
            ],
          ),
...
              );
            },
          ),
          const Spacer(),
          BigButton(
            backgroundColor: theme.colorScheme.error,
            title: 'SPARA',
            onPress: _storeAndStopRecording,
          ),
          const SizedBox(height: 42),
          Center(
            child: TextButton(
              onPressed: () {
...
